appId: com.axellion.loredice
---
- launchApp
- tapOn: "Coleção"
- assertVisible: "Coleção"
- tapOn:
    text: "+"
- assertVisible: "Adicionar Jogo"